remove lego photos

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,7 +62,7 @@
                               <li v-for="comment in post.comments" class="mb-2">
                                 <div class="d-flex flex-wrap">
                                   <div class="user-img">
-                                    <img src="https://randomuser.me/api/portraits/lego/5.jpg" alt="userimg"
+                                    <img src="/images/profile.png" alt="userimg"
                                       class="avatar-35 rounded-circle img-fluid">
                                   </div>
                                   <div class="comment-data-block ml-3">
