--- a/views/partials/create-post.ejs
+++ b/views/partials/create-post.ejs
@@ -9,7 +9,7 @@
             <!-- <form action="#"> -->
             <div class="d-flex align-items-center">
                 <div class="user-img">
-                    <img src="https://randomuser.me/api/portraits/lego/1.jpg" alt="userimg"
+                    <img src="/images/profile.png" alt="userimg"
                         class="avatar-60 rounded-circle">
                 </div>
                 <div class="post-text ml-3 w-100">
