--- a/views/partials/top-navbar.ejs
+++ b/views/partials/top-navbar.ejs
@@ -21,7 +21,7 @@
                 <ul class="navbar-nav ml-auto navbar-list">
                     <li>
                         <a href="/account" class="  d-flex align-items-center">
-                            <img src="https://randomuser.me/api/portraits/lego/1.jpg"
+                            <img src="/images/profile.png"
                                 class="img-fluid rounded-circle mr-3" alt="user">
                             <div class="caption">
                                 <h6 class="mb-0 line-height">
