--- a/views/partials/js-imports.ejs
+++ b/views/partials/js-imports.ejs
@@ -63,3 +63,6 @@
 
 <!-- SocialV JavaScript -->
 <script src="/js/libraries/socialv.js"></script>
+
+<!-- JWT Decode -->
+<script src="/js/libraries/jwt-decode.js"></script>
